fix: queen's tea submit error

--- a/web/shop.html
+++ b/web/shop.html
@@ -78,7 +78,7 @@
     </div>
     <div class="item">
 		<form action="checkout.php" method="post">
-			<input type="hidden" name="item" value="Queen's Tea">
+			<input type="hidden" name="item" value="Queen\'s Tea">
 			<input type="hidden" name="price" value="3.50">
 			<h2>Queen's Tea</h2>
 			<p>Price: $3.5</p>
